--- a/WireTrace.html
+++ b/WireTrace.html
@@ -22,7 +22,7 @@
             --text-muted: #484f58;
             --crimson: #dc2857;
             --cyan: #00d4ff;
-            --green: #3fb950;
+            --green: #3fb950; /* FAAAAAAAAAAAAAAAAH */
             --border: #30363d;
             --hover: rgba(220, 40, 87, 0.1);
             --code-bg: #161b22;
@@ -4193,4 +4193,5 @@
         }
     </script>
 </body>
+
 </html>
