--- a/WireTrace.HTML
+++ b/WireTrace.HTML
@@ -420,7 +420,7 @@
         }
 
         th {
-            padding: 12px 10px;
+            padding: 8px 10px;
             text-align: left;
             font-weight: 600;
             color: var(--text-secondary);
@@ -434,6 +434,7 @@
             border-bottom: 1px solid rgba(45, 55, 72, 0.5);
             cursor: pointer;
             transition: background 0.15s;
+            line-height: 1.3;
         }
 
         tbody tr:hover {
@@ -459,7 +460,7 @@
         }
 
         td {
-            padding: 10px;
+            padding: 6px 8px;
             color: var(--text-primary);
         }
 
@@ -792,6 +793,7 @@
             display: flex;
             flex-direction: column;
             border: 1px solid var(--crimson);
+            overflow: hidden;
         }
 
         .modal-header {
@@ -865,10 +867,9 @@
             font-family: 'JetBrains Mono', monospace;
             font-size: 11px;
             color: var(--text-primary);
-            white-space: pre-wrap;
-            word-break: break-all;
+            white-space: pre;           /* prevents wrapping, enables horizontal scroll */
             max-height: 500px;
-            overflow-y: auto;
+            overflow: auto;             /* adds scrollbars when needed */
         }
 
         .action-btn {
@@ -1272,6 +1273,9 @@
         .hidden {
             display: none !important;
         }
+        .packet-list td:nth-child(2) {
+            white-space: nowrap;
+        }
     </style>
 </head>
 <body>
@@ -1282,7 +1286,7 @@
             <header class="header">
                 <div class="header-content">
                     <h1>
-                        <span class="wire">Wire</span><span class="trace">Trace</span>
+                        <span class="wire">Voda</span><span class="trace">Trace</span>
                     </h1>
                     <p class="subtitle">PCAP & Event Logs Analysis Tool</p>
                     <p class="attribution">Created by Moaz Essam and Developed by Adam Abushaisha</p>
@@ -1364,7 +1368,7 @@
                             <thead>
                                 <tr>
                                     <th style="width: 50px;">NO.</th>
-                                    <th style="width: 180px;">TIME</th>
+                                    <th style="width: 200px;">TIME</th>
                                     <th style="width: 160px;">SOURCE</th>
                                     <th style="width: 160px;">DESTINATION</th>
                                     <th style="width: 100px;">PROTOCOL</th>
@@ -1452,7 +1456,7 @@
                             <thead>
                                 <tr>
                                     <th style="width: 50px;">#</th>
-                                    <th style="width: 180px;">DATE/TIME</th>
+                                    <th style="width: 200px;">DATE/TIME</th>
                                     <th style="width: 100px;">CATEGORY</th>
                                     <th style="width: 100px;">SEVERITY</th>
                                     <th>DETAILS</th>
@@ -1509,10 +1513,10 @@
             <header class="header">
                 <div class="header-content">
                     <a href="#" class="back-link" onclick="showMainTool(); return false;">
-                        ← Back to WireTrace
+                        ← Back to VodaTrace
                     </a>
                     <h1>
-                        <span class="wire">Wire</span><span class="trace">Trace</span> Reference Guide
+                        <span class="wire">Voda</span><span class="trace">Trace</span> Reference Guide
                     </h1>
                     <p class="subtitle">Network Analysis Terminology & Data Interpretation</p>
                 </div>
