Enhance packet list column styling for overflow
Added overflow and text-overflow styles to the second column of the packet list.

--- a/WireTrace.HTML
+++ b/WireTrace.HTML
@@ -1273,8 +1273,10 @@
         .hidden {
             display: none !important;
         }
-        .packet-list td:nth-child(2) {
-            white-space: nowrap;
+        #pcapViewer .packet-list td:nth-child(2) {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         }
         .packet-list table {
             width: 100%;
