Fix event log details rendering with HTML escaping

--- a/WireTrace.HTML
+++ b/WireTrace.HTML
@@ -4336,6 +4336,15 @@
             return str.length > length ? str.substring(0, length) + '...' : str;
         }
 
+        function escapeHtml(value) {
+            return String(value ?? '')
+                .replace(/&/g, '&amp;')
+                .replace(/</g, '&lt;')
+                .replace(/>/g, '&gt;')
+                .replace(/"/g, '&quot;')
+                .replace(/'/g, '&#39;');
+        }
+
         // ============================================
         // EVENT LOG PARSING
         // ============================================
@@ -4777,10 +4786,10 @@
 
                 row.innerHTML = `
                     <td class="text-muted">${event.no}</td>
-                    <td class="text-muted">${event.date}<br><small>${event.time}</small></td>
-                    <td>${event.category}</td>
-                    <td class="protocol-${event.severity.toLowerCase()}">${event.severity}</td>
-                    <td class="truncate" title="${event.details}">${truncate(event.details, 80)}</td>
+                    <td class="text-muted">${escapeHtml(event.date)}<br><small>${escapeHtml(event.time)}</small></td>
+                    <td>${escapeHtml(event.category)}</td>
+                    <td class="protocol-${event.severity.toLowerCase()}">${escapeHtml(event.severity)}</td>
+                    <td class="truncate" title="${escapeHtml(event.details)}">${escapeHtml(truncate(event.details, 80))}</td>
                 `;
 
                 tbody.appendChild(row);
@@ -4805,20 +4814,20 @@
                     <div class="layer-title">Event #${event.no}</div>
                     <div class="detail-row">
                         <span class="detail-label">Date/Time</span>
-                        <span class="detail-value">${event.date} ${event.time}</span>
+                        <span class="detail-value">${escapeHtml(event.date)} ${escapeHtml(event.time)}</span>
                     </div>
                     <div class="detail-row">
                         <span class="detail-label">Category</span>
-                        <span class="detail-value">${event.category}</span>
+                        <span class="detail-value">${escapeHtml(event.category)}</span>
                     </div>
                     <div class="detail-row">
                         <span class="detail-label">Severity</span>
-                        <span class="detail-value protocol-${event.severity.toLowerCase()}">${event.severity}</span>
+                        <span class="detail-value protocol-${event.severity.toLowerCase()}">${escapeHtml(event.severity)}</span>
                     </div>
                 </div>
                 <div class="layer-section">
                     <div class="layer-title">Details</div>
-                    <div style="color: var(--text-primary); font-size: 12px; line-height: 1.5;">${event.details}</div>
+                    <div style="color: var(--text-primary); font-size: 12px; line-height: 1.5; white-space: pre-wrap;">${escapeHtml(event.details)}</div>
                 </div>
             `;
 
